--- a/work-single6.html
+++ b/work-single6.html
@@ -81,7 +81,7 @@ https://templatemo.com/tm-561-purple-buzz
 
         <div class="row pt-5">
             <div class="worksingle-content col-lg-8 m-auto text-left justify-content-center">
-                <h2 class="worksingle-heading h3 pb-3 light-300 typo-space-line">How to choose a theme.</h2>
+                <h2 class="worksingle-heading h3 pb-3 light-300 typo-space-line">How to find sponsors.</h2>
                 <p class="worksingle-footer py-3 text-muted light-300">
                     For original post, go to <a href="https://www.socialtables.com/blog/event-planning/ways-to-attract-sponsors/">Socialtables</a>. <br><br>
                     <strong>8 innovative ways to gain sponsors: </strong><br><br>
