--- a/work-single4.html
+++ b/work-single4.html
@@ -81,7 +81,7 @@ https://templatemo.com/tm-561-purple-buzz
 
         <div class="row pt-5">
             <div class="worksingle-content col-lg-8 m-auto text-left justify-content-center">
-                <h2 class="worksingle-heading h3 pb-3 light-300 typo-space-line">How to choose a theme.</h2>
+                <h2 class="worksingle-heading h3 pb-3 light-300 typo-space-line">How to promote digital marketing.</h2>
                 <p class="worksingle-footer py-3 text-muted light-300">
                     For original post, go to <a href="https://www.lyfemarketing.com/blog/digital-marketing-campaign/">Lyfemarketing</a>. <br><br>
                     <strong>7 tips to be followed while digital marketing: </strong><br><br>
